safari gap problem fixed

--- a/client/components/Side-menu/SideMenu.module.scss
+++ b/client/components/Side-menu/SideMenu.module.scss
@@ -5,7 +5,7 @@
     position: absolute;
     min-height: 100vh;
     margin: -3rem;
-    padding: 3.2rem 2.2rem;
+    padding: 3.4rem 2.7rem;
     width: 300px;
     background: #01010126;
     right: 3rem;
@@ -14,6 +14,7 @@
         cursor: pointer;
         max-width: 29px;
         width: 100%;
+        justify-self: flex-end;
     }
 
     .items {
